# typesafe_units

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TUConfig.cmake  TUConfigVersion.cmake
.github/workflows/: cmake.yml
include/: smart_units_wip.cpp  typesafe_units.h
test/: CMakeLists.txt  test.cpp
typesafe_units/: CMakeLists.txt
typesafe_units/include/tu/: typesafe_units.h
